grammar/tigerParser.cpp

// Generated from ../tiger.g4 by ANTLR 4.7


#include "tigerVisitor.h"

#include "tigerParser.h"


using namespace antlrcpp;
using namespace antlr4;

tigerParser::tigerParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

tigerParser::~tigerParser() {
  delete _interpreter;
}

std::string tigerParser::getGrammarFileName() const {
  return "tiger.g4";
}

const std::vector<std::string>& tigerParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& tigerParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

tigerParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerParser::ExpContext* tigerParser::ProgContext::exp() {
  return getRuleContext<tigerParser::ExpContext>(0);
}

tigerParser::DecsContext* tigerParser::ProgContext::decs() {
  return getRuleContext<tigerParser::DecsContext>(0);
}


size_t tigerParser::ProgContext::getRuleIndex() const {
  return tigerParser::RuleProg;
}

antlrcpp::Any tigerParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::ProgContext* tigerParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, tigerParser::RuleProg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(24);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerParser::T__0:
      case tigerParser::T__8:
      case tigerParser::T__9:
      case tigerParser::T__12:
      case tigerParser::T__24:
      case tigerParser::T__27:
      case tigerParser::T__29:
      case tigerParser::T__31:
      case tigerParser::T__32:
      case tigerParser::STRING:
      case tigerParser::ID:
      case tigerParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(22);
        exp(0);
        break;
      }

      case tigerParser::EOF:
      case tigerParser::T__36:
      case tigerParser::T__37:
      case tigerParser::T__39:
      case tigerParser::T__41:
      case tigerParser::T__44: {
        enterOuterAlt(_localctx, 2);
        setState(23);
        decs();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

tigerParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tigerParser::ExpContext::getRuleIndex() const {
  return tigerParser::RuleExp;
}

void tigerParser::ExpContext::copyFrom(ExpContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StringExpContext ------------------------------------------------------------------

tree::TerminalNode* tigerParser::StringExpContext::STRING() {
  return getToken(tigerParser::STRING, 0);
}

tigerParser::StringExpContext::StringExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::StringExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitStringExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RecordExpContext ------------------------------------------------------------------

tigerParser::Type_idContext* tigerParser::RecordExpContext::type_id() {
  return getRuleContext<tigerParser::Type_idContext>(0);
}

std::vector<tree::TerminalNode *> tigerParser::RecordExpContext::ID() {
  return getTokens(tigerParser::ID);
}

tree::TerminalNode* tigerParser::RecordExpContext::ID(size_t i) {
  return getToken(tigerParser::ID, i);
}

std::vector<tigerParser::ExpContext *> tigerParser::RecordExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::RecordExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::RecordExpContext::RecordExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::RecordExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitRecordExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakExpContext ------------------------------------------------------------------

tigerParser::BreakExpContext::BreakExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::BreakExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitBreakExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RelOpExpContext ------------------------------------------------------------------

std::vector<tigerParser::ExpContext *> tigerParser::RelOpExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::RelOpExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::RelOpExpContext::RelOpExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::RelOpExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitRelOpExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayExpContext ------------------------------------------------------------------

tigerParser::Type_idContext* tigerParser::ArrayExpContext::type_id() {
  return getRuleContext<tigerParser::Type_idContext>(0);
}

std::vector<tigerParser::ExpContext *> tigerParser::ArrayExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::ArrayExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::ArrayExpContext::ArrayExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::ArrayExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitArrayExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileExpContext ------------------------------------------------------------------

std::vector<tigerParser::ExpContext *> tigerParser::WhileExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::WhileExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::WhileExpContext::WhileExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::WhileExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitWhileExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ForExpContext ------------------------------------------------------------------

tree::TerminalNode* tigerParser::ForExpContext::ID() {
  return getToken(tigerParser::ID, 0);
}

std::vector<tigerParser::ExpContext *> tigerParser::ForExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::ForExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::ForExpContext::ForExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::ForExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitForExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignExpContext ------------------------------------------------------------------

tigerParser::LvalueContext* tigerParser::AssignExpContext::lvalue() {
  return getRuleContext<tigerParser::LvalueContext>(0);
}

tigerParser::ExpContext* tigerParser::AssignExpContext::exp() {
  return getRuleContext<tigerParser::ExpContext>(0);
}

tigerParser::AssignExpContext::AssignExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::AssignExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitAssignExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NegExpContext ------------------------------------------------------------------

tigerParser::ExpContext* tigerParser::NegExpContext::exp() {
  return getRuleContext<tigerParser::ExpContext>(0);
}

tigerParser::NegExpContext::NegExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::NegExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitNegExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfExpContext ------------------------------------------------------------------

std::vector<tigerParser::ExpContext *> tigerParser::IfExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::IfExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::IfExpContext::IfExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::IfExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitIfExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LetExpContext ------------------------------------------------------------------

tigerParser::DecsContext* tigerParser::LetExpContext::decs() {
  return getRuleContext<tigerParser::DecsContext>(0);
}

tigerParser::ExpsContext* tigerParser::LetExpContext::exps() {
  return getRuleContext<tigerParser::ExpsContext>(0);
}

tigerParser::LetExpContext::LetExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::LetExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitLetExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivExpContext ------------------------------------------------------------------

std::vector<tigerParser::ExpContext *> tigerParser::MulDivExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::MulDivExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::MulDivExpContext::MulDivExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::MulDivExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitMulDivExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExplistExpContext ------------------------------------------------------------------

tigerParser::ExpsContext* tigerParser::ExplistExpContext::exps() {
  return getRuleContext<tigerParser::ExpsContext>(0);
}

tigerParser::ExplistExpContext::ExplistExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::ExplistExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitExplistExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallExpContext ------------------------------------------------------------------

tree::TerminalNode* tigerParser::FuncCallExpContext::ID() {
  return getToken(tigerParser::ID, 0);
}

std::vector<tigerParser::ExpContext *> tigerParser::FuncCallExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::FuncCallExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::FuncCallExpContext::FuncCallExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::FuncCallExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitFuncCallExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicExpContext ------------------------------------------------------------------

std::vector<tigerParser::ExpContext *> tigerParser::LogicExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::LogicExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::LogicExpContext::LogicExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::LogicExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitLogicExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntExpContext ------------------------------------------------------------------

tree::TerminalNode* tigerParser::IntExpContext::INT() {
  return getToken(tigerParser::INT, 0);
}

tigerParser::IntExpContext::IntExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::IntExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitIntExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LvalueExpContext ------------------------------------------------------------------

tigerParser::LvalueContext* tigerParser::LvalueExpContext::lvalue() {
  return getRuleContext<tigerParser::LvalueContext>(0);
}

tigerParser::LvalueExpContext::LvalueExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::LvalueExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitLvalueExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddSubExpContext ------------------------------------------------------------------

std::vector<tigerParser::ExpContext *> tigerParser::AddSubExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::AddSubExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::AddSubExpContext::AddSubExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::AddSubExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitAddSubExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NewExpContext ------------------------------------------------------------------

tigerParser::Type_idContext* tigerParser::NewExpContext::type_id() {
  return getRuleContext<tigerParser::Type_idContext>(0);
}

tigerParser::NewExpContext::NewExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::NewExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitNewExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MethodCallExpContext ------------------------------------------------------------------

tigerParser::LvalueContext* tigerParser::MethodCallExpContext::lvalue() {
  return getRuleContext<tigerParser::LvalueContext>(0);
}

tree::TerminalNode* tigerParser::MethodCallExpContext::ID() {
  return getToken(tigerParser::ID, 0);
}

std::vector<tigerParser::ExpContext *> tigerParser::MethodCallExpContext::exp() {
  return getRuleContexts<tigerParser::ExpContext>();
}

tigerParser::ExpContext* tigerParser::MethodCallExpContext::exp(size_t i) {
  return getRuleContext<tigerParser::ExpContext>(i);
}

tigerParser::MethodCallExpContext::MethodCallExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::MethodCallExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitMethodCallExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NilExpContext ------------------------------------------------------------------

tigerParser::NilExpContext::NilExpContext(ExpContext *ctx) { copyFrom(ctx); }

antlrcpp::Any tigerParser::NilExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitNilExp(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::ExpContext* tigerParser::exp() {
   return exp(0);
}

tigerParser::ExpContext* tigerParser::exp(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  tigerParser::ExpContext *_localctx = _tracker.createInstance<ExpContext>(_ctx, parentState);
  tigerParser::ExpContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, tigerParser::RuleExp, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(126);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<NilExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(27);
      match(tigerParser::T__0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<IntExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(28);
      match(tigerParser::INT);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<StringExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(29);
      match(tigerParser::STRING);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<ArrayExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(30);
      type_id();
      setState(31);
      match(tigerParser::T__1);
      setState(32);
      exp(0);
      setState(33);
      match(tigerParser::T__2);
      setState(34);
      match(tigerParser::T__3);
      setState(35);
      exp(18);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<RecordExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(37);
      type_id();
      setState(38);
      match(tigerParser::T__4);
      setState(51);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == tigerParser::ID) {
        setState(39);
        match(tigerParser::ID);
        setState(40);
        match(tigerParser::T__5);
        setState(41);
        exp(0);
        setState(48);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == tigerParser::T__6) {
          setState(42);
          match(tigerParser::T__6);
          setState(43);
          match(tigerParser::ID);
          setState(44);
          match(tigerParser::T__5);
          setState(45);
          exp(0);
          setState(50);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(53);
      match(tigerParser::T__7);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<NewExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(55);
      match(tigerParser::T__8);
      setState(56);
      type_id();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<LvalueExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(57);
      lvalue(0);
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<FuncCallExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(58);
      match(tigerParser::ID);
      setState(59);
      match(tigerParser::T__9);
      setState(68);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << tigerParser::T__0)
        | (1ULL << tigerParser::T__8)
        | (1ULL << tigerParser::T__9)
        | (1ULL << tigerParser::T__12)
        | (1ULL << tigerParser::T__24)
        | (1ULL << tigerParser::T__27)
        | (1ULL << tigerParser::T__29)
        | (1ULL << tigerParser::T__31)
        | (1ULL << tigerParser::T__32)
        | (1ULL << tigerParser::STRING)
        | (1ULL << tigerParser::ID)
        | (1ULL << tigerParser::INT))) != 0)) {
        setState(60);
        exp(0);
        setState(65);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == tigerParser::T__6) {
          setState(61);
          match(tigerParser::T__6);
          setState(62);
          exp(0);
          setState(67);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(70);
      match(tigerParser::T__10);
      break;
    }

    case 9: {
      _localctx = _tracker.createInstance<MethodCallExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(71);
      lvalue(0);
      setState(72);
      match(tigerParser::T__11);
      setState(73);
      match(tigerParser::ID);
      setState(74);
      match(tigerParser::T__9);
      setState(83);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << tigerParser::T__0)
        | (1ULL << tigerParser::T__8)
        | (1ULL << tigerParser::T__9)
        | (1ULL << tigerParser::T__12)
        | (1ULL << tigerParser::T__24)
        | (1ULL << tigerParser::T__27)
        | (1ULL << tigerParser::T__29)
        | (1ULL << tigerParser::T__31)
        | (1ULL << tigerParser::T__32)
        | (1ULL << tigerParser::STRING)
        | (1ULL << tigerParser::ID)
        | (1ULL << tigerParser::INT))) != 0)) {
        setState(75);
        exp(0);
        setState(80);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == tigerParser::T__6) {
          setState(76);
          match(tigerParser::T__6);
          setState(77);
          exp(0);
          setState(82);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(85);
      match(tigerParser::T__10);
      break;
    }

    case 10: {
      _localctx = _tracker.createInstance<NegExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(87);
      match(tigerParser::T__12);
      setState(88);
      exp(12);
      break;
    }

    case 11: {
      _localctx = _tracker.createInstance<ExplistExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(89);
      match(tigerParser::T__9);
      setState(90);
      exps();
      setState(91);
      match(tigerParser::T__10);
      break;
    }

    case 12: {
      _localctx = _tracker.createInstance<AssignExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(93);
      lvalue(0);
      setState(94);
      match(tigerParser::T__23);
      setState(95);
      exp(6);
      break;
    }

    case 13: {
      _localctx = _tracker.createInstance<IfExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(97);
      match(tigerParser::T__24);
      setState(98);
      exp(0);
      setState(99);
      match(tigerParser::T__25);
      setState(100);
      exp(0);
      setState(103);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
      case 1: {
        setState(101);
        match(tigerParser::T__26);
        setState(102);
        exp(0);
        break;
      }

      }
      break;
    }

    case 14: {
      _localctx = _tracker.createInstance<WhileExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(105);
      match(tigerParser::T__27);
      setState(106);
      exp(0);
      setState(107);
      match(tigerParser::T__28);
      setState(108);
      exp(4);
      break;
    }

    case 15: {
      _localctx = _tracker.createInstance<ForExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(110);
      match(tigerParser::T__29);
      setState(111);
      match(tigerParser::ID);
      setState(112);
      match(tigerParser::T__23);
      setState(113);
      exp(0);
      setState(114);
      match(tigerParser::T__30);
      setState(115);
      exp(0);
      setState(116);
      match(tigerParser::T__28);
      setState(117);
      exp(3);
      break;
    }

    case 16: {
      _localctx = _tracker.createInstance<BreakExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(119);
      match(tigerParser::T__31);
      break;
    }

    case 17: {
      _localctx = _tracker.createInstance<LetExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(120);
      match(tigerParser::T__32);
      setState(121);
      decs();
      setState(122);
      match(tigerParser::T__33);
      setState(123);
      exps();
      setState(124);
      match(tigerParser::T__34);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(142);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(140);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MulDivExpContext>(_tracker.createInstance<ExpContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExp);
          setState(128);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(129);
          dynamic_cast<MulDivExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == tigerParser::T__13

          || _la == tigerParser::T__14)) {
            dynamic_cast<MulDivExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(130);
          exp(12);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<AddSubExpContext>(_tracker.createInstance<ExpContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExp);
          setState(131);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(132);
          dynamic_cast<AddSubExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == tigerParser::T__12

          || _la == tigerParser::T__15)) {
            dynamic_cast<AddSubExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(133);
          exp(11);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<RelOpExpContext>(_tracker.createInstance<ExpContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExp);
          setState(134);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(135);
          dynamic_cast<RelOpExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << tigerParser::T__5)
            | (1ULL << tigerParser::T__16)
            | (1ULL << tigerParser::T__17)
            | (1ULL << tigerParser::T__18)
            | (1ULL << tigerParser::T__19)
            | (1ULL << tigerParser::T__20))) != 0))) {
            dynamic_cast<RelOpExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(136);
          exp(10);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<LogicExpContext>(_tracker.createInstance<ExpContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExp);
          setState(137);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(138);
          dynamic_cast<LogicExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == tigerParser::T__21

          || _la == tigerParser::T__22)) {
            dynamic_cast<LogicExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(139);
          exp(9);
          break;
        }

        } 
      }
      setState(144);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}
